# viper-client

./: .env.example  .gitignore  Cargo.toml  FRCG.json  INFO.json  README.md  UAUT.json  UCFG.json
.circleci/: config.yml
demo/: index.html
docs/: README.md  channels.md  json-requests.md
src/: channel.rs  command.rs  command_response.rs  ctpp_channel.rs  demo.rs  device.rs  helper.rs  lib.rs  main.rs  stream_wrapper.rs  test_helper.rs  viper_client.rs
src/command/: base.rs  command_request.rs  command_response.rs
src/viper_client/: channel.rs  command.rs  ctpp.rs  ctpp_channel.rs  helper.rs
viper-minimal/: .env.example  Cargo.toml  README.md
viper-minimal/src/: main.rs  sign_up.rs
viper-web/: Cargo.toml  README.md
viper-web/demo/: main.js
viper-web/src/: main.rs
