[package]
name = "viper-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viper_client = { path = "../" }

# Still required so it seems:
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
rand = "0.8.5"

[[bin]]
name = "sign_up"
path = "src/sign_up.rs"
